--- a/src/scss/modules/_misc.scss
+++ b/src/scss/modules/_misc.scss
@@ -1,15 +1,15 @@
 ::selection{
-  background: #333;
+  background: #2b6ac3;
   color: #fff;
   text-shadow: none;
 }
 ::-moz-selection{
-  background: #333;
+  background: #2b6ac3 ;
   color: #fff;
   text-shadow: none;
 }
 ::-webkit-selection{
-  background: #333;
+  background: #2b6ac3 ;
   color: #fff;
   text-shadow: none;
 }
